# reroute-base-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  config.py  logger.py  main.py  pyproject.toml  requirements.txt
{{cookiecutter.project_name}}/app/: database.py  root.py
{{cookiecutter.project_name}}/app/db_models/: user.py
{{cookiecutter.project_name}}/app/routes/hello/: page.py
{{cookiecutter.project_name}}/tests/: test_main.py
